--- a/styles.css
+++ b/styles.css
@@ -3,5 +3,5 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
-    background: url(https://p325k7wa.twic.pics/high/dragon-ball/dragonball-xenoverse-2/00-page-setup/dbxv2_game-thumbnail.jpg?twic=v1/resize=760/step=10/quality=80);
+    background: url(https://th.bing.com/th/id/OIP.kgxEeA-w3IlDJo4yz9SrxAHaEK?w=321&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7);
 }
