--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 h1 {
-    color: rgb(190, 225, 255);
+    color: rgb(64, 104, 139);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
     background: url(https://th.bing.com/th/id/OIP.kgxEeA-w3IlDJo4yz9SrxAHaEK?w=321&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7);
+    background-size: contain;
 }
