--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 body {
-    background: url(https://th.bing.com/th/id/OIP.kgxEeA-w3IlDJo4yz9SrxAHaEK?w=321&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7);
-    background-size: contain;
+    background: url(R.jpeg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
